--- a/about.css
+++ b/about.css
@@ -182,6 +182,18 @@ html, body {
   transition: background-color 0.4s ease, box-shadow 0.4s ease;
 }
 
+.logo {
+  order: 1;
+}
+
+.main-nav {
+  order: 2;
+}
+
+.burger-menu {
+  order: 3;
+}
+
 .app-header.scrolled.on-light {
     background-color: #fff;
     box-shadow: 0 2px 10px rgba(0,0,0,0.05);
