--- a/index.css
+++ b/index.css
@@ -195,6 +195,10 @@
       background-color: rgba(0, 0, 0, 0.9);
   }
   
+  .logo {
+      order: 1;
+  }
+
   .logo-image {
       height: 80px; 
       width: auto;
@@ -206,6 +210,10 @@
 
   .mobile-logo {
     display: none;
+  }
+
+  .main-nav {
+      order: 2;
   }
 
   .main-nav ul {
@@ -403,6 +411,7 @@
       font-size: 24px;
       z-index: 1002;
       padding: 5px;
+      order: 3;
   }
   .app-header.on-dark .burger-menu { color: var(--text-light); }
   .app-header.on-light .burger-menu { color: var(--text-dark); }
